# protein-annotator

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/protein_annotator/: __init__.py  protein_annotator.py
tests/: test_protein_annotator.py
