[tool.poetry]
name = "protein_annotator"
version = "0.1.0"
description = "a genome annotator based on the protein annnotationsfunctions to analyze and annotate your genome using the protein annotations."
authors = ["Gaurav Sablok"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
